# efisien_cs

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 1f6b4f955bf9_create_projects_and_tickets.py  2e298145de06_create_meetings.py  600ec290add1_create_users_and_messages.py  9f02d9fc5e45_add_google_event_id_to_meetings.py  bc0f5df9b7ec_create_leads.py  cb654acf820e_create_client_facts_and_notifications.py
app/: config.py  db.py  main.py
app/agent/: orchestrator.py  prompts.py  tools.py
app/api/: chat.py  whatsapp.py
app/integrations/: calendar.py  email.py  google_calendar.py  whatsapp.py
app/llm/: base.py  fake.py  gemini.py
app/models/: client_fact.py  lead.py  meeting.py  message.py  notification.py  project.py  ticket.py  user.py
app/rag/: chunking.py  embeddings.py  ingest.py  retriever.py  store.py
app/repositories/: client_fact_repo.py  lead_repo.py  meeting_repo.py  user_repo.py  (+4 more)
docs/: menjalankan-dengan-docker.md
scripts/: ingest_docs.py  seed_projects.py
static/: index.html
tests/: conftest.py  fakes.py  test_calendar.py  test_chat_api.py  test_chunking.py  test_client_fact_repo.py  test_email.py  test_email_smtp.py  test_embeddings.py  test_fake_llm.py  test_google_calendar.py  test_ingest.py  test_lead_repo.py  test_meeting_repo.py  test_message_repo.py  test_notification_repo.py  test_orchestrator.py  test_project_repo.py  test_retriever.py  test_store.py  test_ticket_repo.py  test_tools.py  test_user_repo.py  test_whatsapp.py
(+20 files in other folders)
