[project]
name = "efisien-cs"
version = "0.1.0"
description = "AI Customer Service for PT Maju Digital"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.5",
    "google-genai>=0.8",
    "chromadb>=1.5.9",
    "httpx>=0.28.1",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
